--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -60,7 +60,7 @@
     &__wrapper {
       position: fixed;
       z-index: 1000;
-      height: 2%;
+      height: 3%;
       width: 50%;
       bottom: 14%; //pic height: 80% margin-top : 7%
       background: rgb(240, 238, 238);
@@ -109,6 +109,14 @@
         gap: 15px;
 
         background-color: rgb(235, 233, 233);
+
+        &__video {
+          overflow: hidden;
+          margin: 0;
+          padding: 0;
+          border-radius: 7px;
+          object-fit: cover;
+        }
         img {
           width: 100%;
         }
