--- a/frontend/src/components/Video/Video.module.scss
+++ b/frontend/src/components/Video/Video.module.scss
@@ -1,7 +1,8 @@
 .video {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    // border: 2px solid cyan;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  // border: 2px solid cyan;
 }
