--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -249,7 +249,7 @@
       margin: 0;
       padding: 0;
       width: 100%;
-      font-size: $fontsize-m;
+      font-size: 0.95vw;
       // text-align: justify;
     }
     h3 {
